@@ -1,2 +1,2 @@
-java -DIReallyKnowWhatIAmDoingISwear -Xms2048M -Xmx2048M -jar purpur-1.20.4-2176.jar -o false
+java --add-modules=jdk.incubator.vector -Xms2048M -Xmx2048M -jar purpur-1.20.4-2176.jar --nogui
 PAUSE
